--- a/src/main/resources/com/colinker/activities-vue.fxml
+++ b/src/main/resources/com/colinker/activities-vue.fxml
@@ -13,7 +13,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button id="newActivityButton" fx:id="newActivityButton" layoutX="1138.0" layoutY="60.0" mnemonicParsing="false" onAction="#newActivity" style="-fx-background-color: #DAEBFF;" text="nouvelle activité" textFill="#253aff">
+      <Button id="newActivityButton" fx:id="newActivityButton" layoutX="1138.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: #DAEBFF;" text="nouvelle activité" textFill="#253aff">
          <font>
             <Font size="15.0" />
          </font>
