--- a/src/main/resources/com/colinker/activities/activities-vue.fxml
+++ b/src/main/resources/com/colinker/activities/activities-vue.fxml
@@ -7,7 +7,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.plugins.activities.ActivityListController">
    <children>
-      <fx:include source="navbar-vue.fxml" />
+      <fx:include source="../navbar-vue.fxml" />
       <Pane id="activityListPane" fx:id="activityListPane" layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0" style="-fx-background-color: #EDF5FF;" />
       <Label layoutX="201.0" layoutY="25.0" text="Gestion des activités">
          <font>
