--- a/src/main/resources/com/colinker/activities/newActivityModal.fxml
+++ b/src/main/resources/com/colinker/activities/newActivityModal.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane id="newActivityModalPane" fx:id="newActivityModalPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane  fx:controller="com.colinker.plugins.activities.ActivityListController" id="newActivityModalPane" fx:id="newActivityModalPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <effect>
       <DropShadow />
    </effect>
@@ -20,31 +19,37 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <TextArea fx:id="newActivityDescription" layoutX="14.0" layoutY="274.0" prefHeight="78.0" prefWidth="480.0" promptText="courte description" />
-      <Button layoutX="445.0" layoutY="368.0" mnemonicParsing="false" text="Créer" />
-      <Label layoutX="14.0" layoutY="63.0" prefHeight="20.0" prefWidth="124.0" text="Nom de l'activité">
+      <TextArea fx:id="newActivityDescription" layoutX="10.0" layoutY="119.0" prefHeight="78.0" prefWidth="480.0" promptText="courte description" />
+      <Button id="registerActivityButton" fx:id="registerActivityButton" onAction="#registerActivity" layoutX="441.0" layoutY="461.0" mnemonicParsing="false" text="Créer" />
+      <Label layoutX="11.0" layoutY="61.0" prefHeight="20.0" prefWidth="124.0" text="Nom de l'activité">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="newActivityName" layoutX="14.0" layoutY="87.0" prefHeight="25.0" prefWidth="217.0" />
-      <DatePicker fx:id="newActivityDay" layoutX="14.0" layoutY="153.0" />
-      <Label layoutX="14.0" layoutY="130.0" prefHeight="20.0" prefWidth="124.0" text="Date">
+      <TextField fx:id="newActivityName" layoutX="9.0" layoutY="83.0" prefHeight="25.0" prefWidth="217.0" />
+      <DatePicker fx:id="newActivityDay" layoutX="14.0" layoutY="305.0" />
+      <Label layoutX="14.0" layoutY="285.0" prefHeight="20.0" prefWidth="124.0" text="Date">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="newActivityTime" layoutX="205.0" layoutY="153.0" promptText="format : hh:mm" />
-      <Label layoutX="205.0" layoutY="130.0" prefHeight="20.0" prefWidth="124.0" text="Heure">
+      <TextField fx:id="newActivityTime" layoutX="14.0" layoutY="365.0" promptText="format : hh:mm" />
+      <Label layoutX="14.0" layoutY="345.0" prefHeight="20.0" prefWidth="124.0" text="Heure de début">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="newActivityName1" layoutX="14.0" layoutY="224.0" prefHeight="25.0" prefWidth="217.0" />
-      <Label layoutX="14.0" layoutY="200.0" prefHeight="20.0" prefWidth="124.0" text="Adresse">
+      <TextField fx:id="newActivityName1" layoutX="14.0" layoutY="238.0" prefHeight="25.0" prefWidth="217.0" />
+      <Label layoutX="14.0" layoutY="214.0" prefHeight="20.0" prefWidth="124.0" text="Adresse">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
+      <Label layoutX="176.0" layoutY="345.0" prefHeight="20.0" prefWidth="124.0" text="Heure de fin">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="newActivityTime1" layoutX="176.0" layoutY="365.0" promptText="format : hh:mm" />
    </children>
 </Pane>
