[config] remap file structure

--- a/src/main/resources/com/colinker/tasks/newTaskModal.fxml
+++ b/src/main/resources/com/colinker/tasks/newTaskModal.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane id="newTaskModalPane" fx:id="newTaskModalPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.plugins.tasks.TaskModalController">
+<Pane id="newTaskModalPane" fx:id="newTaskModalPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.components.plugins.tasks.TaskModalController">
    <effect>
       <DropShadow />
    </effect>
