--- a/src/main/resources/com/colinker/login/login.fxml
+++ b/src/main/resources/com/colinker/login/login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane fx:controller="com.colinker.auth.LoginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="com.colinker.controllers.LoginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="83.0" prefWidth="1280.0" style="-fx-background-color: #5356FF;">
          <children>
