[scene-router] setup scene router and navbar labels click navigation

--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="192.0" style="-fx-background-color: #E7F3FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="com.colinker.controllers.NavbarController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="192.0" style="-fx-background-color: #E7F3FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane id="navbar-calendar-section" fx:id="navbarCalendarSection" layoutY="132.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showCalendarPage" id="navbar-calendar-section" fx:id="navbarCalendarSection" layoutY="132.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="55.0" layoutY="14.0" text="Calendrier">
                <font>
@@ -15,7 +15,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane id="navbar-activities-section" fx:id="navbarActivitiesSection" layoutY="207.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showTasksListPage" id="navbar-activities-section" fx:id="navbarActivitiesSection" layoutY="207.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="63.0" layoutY="14.0" text="Activités">
                <font>
