--- a/src/main/resources/com/colinker/tasks/tasks-list.fxml
+++ b/src/main/resources/com/colinker/tasks/tasks-list.fxml
@@ -4,11 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.controllers.TasksListController">
    <children>
       <fx:include source="../navbar-vue.fxml" />
-      <Pane id="taskListPane" fx:id="taskListPane" layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0" style="-fx-background-color: #EDF5FF;" />
+      <Pane id="taskListPane" fx:id="taskListPane" layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0" style="-fx-background-color: #EDF5FF;">
+         <VBox fx:id="taskListVBox" />
+      </Pane>
       <Label layoutX="201.0" layoutY="25.0" text="Gestion des activités">
          <font>
             <Font size="24.0" />
