--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -42,6 +42,15 @@
             </Label>
          </children>
       </Pane>
+      <Pane onMouseClicked="#showUpdatePage" id="navbar-update-section" fx:id="navbarUpdateSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+         <children>
+            <Label layoutX="68.0" layoutY="14.0" text="Mise à jour">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
       <Pane id="navbar-notes-section" fx:id="navbarNotesSection11" layoutY="665.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="44.0" layoutY="14.0" text="Déconnexion">
