--- a/src/main/resources/com/colinker/tasks/tasks-list.fxml
+++ b/src/main/resources/com/colinker/tasks/tasks-list.fxml
@@ -6,13 +6,32 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.HBox?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.controllers.TasksListController">
    <children>
       <fx:include source="../navbar-vue.fxml" />
-      <Pane id="taskListPane" fx:id="taskListPane" layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0" style="-fx-background-color: #EDF5FF;">
-         <VBox fx:id="taskListVBox" />
-      </Pane>
-      <Label layoutX="201.0" layoutY="25.0" text="Gestion des activités">
+      <HBox layoutX="201.0" layoutY="60.0" spacing="10">
+         <Button id="assignedTasksButton" fx:id="assignedTasksButton" mnemonicParsing="false" onAction="#showAssignedTasks" style="-fx-background-color: #DAEBFF;" text="Tâches à faire" textFill="#253aff">
+            <font>
+               <Font size="15.0" />
+            </font>
+         </Button>
+         <Button id="assignedDoneTasksButton" fx:id="assignedDoneTasksButton" mnemonicParsing="false" onAction="#showAssignedDoneTasks" style="-fx-background-color: #DAEBFF;" text="Tâches terminées" textFill="#253aff">
+            <font>
+               <Font size="15.0" />
+            </font>
+         </Button>
+         <Button id="createdTasksButton" fx:id="createdTasksButton" mnemonicParsing="false" onAction="#showCreatedTasks" style="-fx-background-color: #DAEBFF;" text="Tâches créées" textFill="#253aff">
+            <font>
+               <Font size="15.0" />
+            </font>
+         </Button>
+      </HBox>
+      <ScrollPane id="taskListPane" fx:id="taskListPane" layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0" style="-fx-background-color: #EDF5FF;">
+            <VBox fx:id="taskListVBox"/>
+      </ScrollPane>
+      <Label layoutX="201.0" layoutY="25.0" text="Gestion des tâches">
          <font>
             <Font size="24.0" />
          </font>
