--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:controller="com.colinker.controllers.NavbarController" fx:id="navbarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="192.0" style="-fx-background-color: #E7F3FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="com.colinker.controllers.NavbarController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="192.0" style="-fx-background-color: #E7F3FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane onMouseClicked="#showCalendarPage" id="navbar-calendar-section" fx:id="navbarCalendarSection" layoutY="132.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
@@ -24,9 +24,27 @@
             </Label>
          </children>
       </Pane>
+      <Pane onMouseClicked="#showNotesPage" id="navbar-notes-section" fx:id="navbarNotesSection" layoutY="281.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+         <children>
+            <Label layoutX="55.0" layoutY="14.0" text="Mes notes">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
       <Pane id="navbar-plugin-section" fx:id="navbarPluginSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="68.0" layoutY="14.0" text="Plug-in">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane id="navbar-notes-section" fx:id="navbarLogSection" layoutY="665.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+         <children>
+            <Label layoutX="44.0" layoutY="14.0" text="Déconnexion">
                <font>
                   <Font size="18.0" />
                </font>
