--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -33,9 +33,9 @@
             </Label>
          </children>
       </Pane>
-      <Pane id="navbar-plugin-section" fx:id="navbarPluginSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showPluginsPage" id="navbar-plugin-section" fx:id="navbarPluginSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
-            <Label layoutX="68.0" layoutY="14.0" text="Plug-in">
+            <Label layoutX="68.0" layoutY="14.0" text="Plugins">
                <font>
                   <Font size="18.0" />
                </font>
