--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -3,10 +3,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
 <Pane fx:controller="com.colinker.controllers.NavbarController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="192.0" style="-fx-background-color: #E7F3FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Pane onMouseClicked="#showCalendarPage" id="navbar-calendar-section" fx:id="navbarCalendarSection" layoutY="132.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+   <VBox fx:id="navbarVBox" spacing="10">
+      <Pane onMouseClicked="#showCalendarPage" id="navbar-calendar-section" fx:id="navbarCalendarSection" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="55.0" layoutY="14.0" text="Calendrier">
                <font>
@@ -15,7 +16,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane onMouseClicked="#showTasksListPage" id="navbar-activities-section" fx:id="navbarActivitiesSection" layoutY="207.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showTasksListPage" id="navbar-activities-section" fx:id="navbarActivitiesSection" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="63.0" layoutY="14.0" text="Activités">
                <font>
@@ -24,7 +25,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane onMouseClicked="#showNotesPage" id="navbar-notes-section" fx:id="navbarNotesSection" layoutY="281.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showNotesPage" id="navbar-notes-section" fx:id="navbarNotesSection" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="55.0" layoutY="14.0" text="Mes notes">
                <font>
@@ -33,7 +34,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane onMouseClicked="#showPluginsPage" id="navbar-plugin-section" fx:id="navbarPluginSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showPluginsPage" id="navbar-plugin-section" fx:id="navbarPluginSection" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="68.0" layoutY="14.0" text="Plugins">
                <font>
@@ -42,7 +43,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane onMouseClicked="#showUpdatePage" id="navbar-update-section" fx:id="navbarUpdateSection" layoutY="348.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane onMouseClicked="#showUpdatePage" id="navbar-update-section" fx:id="navbarUpdateSection" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="68.0" layoutY="14.0" text="Mise à jour">
                <font>
@@ -51,7 +52,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane id="navbar-notes-section" fx:id="navbarNotesSection11" layoutY="665.0" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
+      <Pane id="navbar-notes-section" fx:id="navbarNotesSection11" prefHeight="55.0" prefWidth="192.0" style="-fx-background-color: #DAEBFF;">
          <children>
             <Label layoutX="44.0" layoutY="14.0" text="Déconnexion">
                <font>
@@ -60,5 +61,5 @@
             </Label>
          </children>
       </Pane>
-   </children>
+   </VBox>
 </Pane>
