--- a/src/main/resources/com/colinker/notes/note.fxml
+++ b/src/main/resources/com/colinker/notes/note.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" fx:controller="com.colinker.controllers.NotesController" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <fx:include source="../navbar-vue.fxml" />
         <HBox layoutX="201.0" layoutY="101.0" prefHeight="619.0" prefWidth="1074.0">
