--- a/src/main/resources/com/colinker/navbar-vue.fxml
+++ b/src/main/resources/com/colinker/navbar-vue.fxml
@@ -54,7 +54,7 @@
          </font>
       </Label>
    </Pane>
-   <Pane id="navbar-notes-section" fx:id="navbarNotesSection11" layoutY="665.0" prefHeight="55.0" prefWidth="192.0"
+   <Pane onMouseClicked="#logout" id="navbar-deconnexion-section" fx:id="navbarDeconnexionSection" layoutY="665.0" prefHeight="55.0" prefWidth="192.0"
          style="-fx-background-color: #DAEBFF;">
       <Label layoutX="44.0" layoutY="14.0" text="Déconnexion">
          <font>
