--- a/src/main/resources/com/colinker/login/login.fxml
+++ b/src/main/resources/com/colinker/login/login.fxml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane fx:controller="com.colinker.controllers.LoginController" maxHeight="-Infinity" maxWidth="-Infinity"
-      minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0"
-      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.colinker.controllers.LoginController">
     <AnchorPane prefHeight="83.0" prefWidth="1280.0" style="-fx-background-color: #5356FF;">
         <children>
             <Label layoutX="555.0" layoutY="14.0" text="Connexion" textFill="WHITE">
                 <font>
-                    <Font size="36.0"/>
+                    <Font size="36.0" />
                 </font>
             </Label>
         </children>
@@ -26,43 +18,37 @@
     <Pane layoutX="63.0" layoutY="87.0" prefHeight="606.0" prefWidth="1152.0" style="-fx-background-color: #F8F6E3;">
         <Label layoutX="537.0" layoutY="170.0" text="Email">
             <font>
-                <Font size="33.0"/>
+                <Font size="33.0" />
             </font>
         </Label>
         <Label layoutX="496.0" layoutY="333.0" text="Mot de passe">
             <font>
-                <Font size="27.0"/>
+                <Font size="27.0" />
             </font>
         </Label>
-        <PasswordField fx:id="loginPasswordField" layoutX="418.0" layoutY="386.0" prefHeight="59.0"
-                       prefWidth="330.0" style="-fx-border-color: #5356FF;">
+        <PasswordField fx:id="loginPasswordField" layoutX="418.0" layoutY="386.0" prefHeight="59.0" prefWidth="330.0" style="-fx-border-radius: 12px;">
             <font>
-                <Font size="24.0"/>
+                <Font size="24.0" />
             </font>
         </PasswordField>
-        <TextField fx:id="loginEmailField" layoutX="418.0" layoutY="224.0" prefHeight="59.0" prefWidth="330.0"
-                   style="-fx-border-color: #5356FF;">
+        <TextField fx:id="loginEmailField" layoutX="418.0" layoutY="224.0" prefHeight="59.0" prefWidth="330.0" style="-fx-border-radius: 12;">
             <font>
-                <Font size="24.0"/>
+                <Font size="24.0" />
             </font>
         </TextField>
-        <Button fx:id="loginActionButton" layoutX="494.0" layoutY="484.0" mnemonicParsing="false" onAction="#login"
-                prefHeight="59.0" prefWidth="178.0" style="-fx-background-color: #5356FF;" text="Connexion"
-                textFill="WHITE">
+        <Button fx:id="loginActionButton" layoutX="494.0" layoutY="484.0" mnemonicParsing="false" onAction="#login" prefHeight="59.0" prefWidth="178.0" style="-fx-background-color: #5356FF; -fx-border-radius: 10;" text="Connexion" textFill="WHITE">
             <font>
-                <Font size="26.0"/>
+                <Font size="26.0" />
             </font>
         </Button>
-        <ImageView fitHeight="275.0" fitWidth="293.0" layoutX="438.0" layoutY="-30.0" pickOnBounds="true"
-                   preserveRatio="true">
+        <ImageView fitHeight="275.0" fitWidth="293.0" layoutX="438.0" layoutY="-30.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../CoLinker-logo.png"/>
+                <Image url="@../CoLinker-logo.png" />
             </image>
         </ImageView>
-        <Label fx:id="redirectColinkerLink" layoutX="519.0" layoutY="561.0" onMouseClicked="#redirectColinkerLink"
-               text="Je n'ai pas de compte" textFill="#5356ff">
+        <Label fx:id="redirectColinkerLink" layoutX="519.0" layoutY="561.0" onMouseClicked="#redirectColinkerLink" text="Je n'ai pas de compte" textFill="#5356ff">
             <font>
-                <Font name="System Bold" size="12.0"/>
+                <Font name="System Bold" size="12.0" />
             </font>
         </Label>
     </Pane>
